--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Le mie orchidee</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Schede di allevamento orchidee</h1>
+
+  <ul>
+    <li><a href="aerangis-mystacidii.html">Aerangis mystacidii</a></li>
+    <li><a href="epidendrum-polybulbon.html">Epidendrum polybulbon</a></li>
+    <li><a href="phalaenopsis-mini-mark.html">Phalaenopsis Mini Mark</a></li>
+  </ul>
 </body>
 </html>
