Add details for Aerangis mystacidii care

--- a/aerangis-mystacidii.html
+++ b/aerangis-mystacidii.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <title>Aerangis mystacidii</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Aerangis mystacidii</h1>
 
+  <ul class="scheda">
+    <li><strong>Luce:</strong> media, indiretta</li>
+    <li><strong>Temperatura:</strong> 18–26 °C</li>
+    <li><strong>Umidità:</strong> 60–80%</li>
+    <li><strong>Annaffiatura:</strong> regolare, asciugare tra un ciclo e l’altro</li>
+    <li><strong>Substrato:</strong> bark fine / montata</li>
+    <li><strong>Fioritura:</strong> primavera–estate</li>
+  </ul>
+
+  <p class="note">
+    Orchidea africana epifita, ama aria in movimento e buona umidità.
+  </p>
+
+  <a href="index.html">⬅ Torna all’elenco</a>
+</body>
+</html>
