Add details for Epidendrum polybulbon

--- a/epidendrum-polybulbon.html
+++ b/epidendrum-polybulbon.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <title>Epidendrum polybulbon</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Epidendrum polybulbon</h1>
 
+  <ul class="scheda">
+    <li><strong>Luce:</strong> medio-alta</li>
+    <li><strong>Temperatura:</strong> 16–28 °C</li>
+    <li><strong>Umidità:</strong> 50–70%</li>
+    <li><strong>Annaffiatura:</strong> frequente in crescita</li>
+    <li><strong>Substrato:</strong> bark medio o montata</li>
+    <li><strong>Fioritura:</strong> estate</li>
+  </ul>
+
+  <p class="note">
+    Specie robusta, tollera luce più intensa rispetto ad altre orchidee.
+  </p>
+
+  <a href="index.html">⬅ Torna all’elenco</a>
+</body>
+</html>
