Add Phalaenopsis Mini Mark HTML page

--- a/phalaenopsis-mini-mark.html
+++ b/phalaenopsis-mini-mark.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <title>Phalaenopsis Mini Mark</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Phalaenopsis Mini Mark</h1>
 
+  <ul class="scheda">
+    <li><strong>Luce:</strong> bassa-media, indiretta</li>
+    <li><strong>Temperatura:</strong> 18–30 °C</li>
+    <li><strong>Umidità:</strong> 40–60%</li>
+    <li><strong>Annaffiatura:</strong> ogni 7–10 giorni</li>
+    <li><strong>Substrato:</strong> bark fine</li>
+    <li><strong>Fioritura:</strong> inverno–primavera</li>
+  </ul>
+
+  <p class="note">
+    Ibrido compatto, ideale per interni luminosi ma senza sole diretto.
+  </p>
+
+  <a href="index.html">⬅ Torna all’elenco</a>
+</body>
+</html>
