Add detailed care instructions for Aerangis mystacidii

--- a/aerangis-mystacidii.html
+++ b/aerangis-mystacidii.html
@@ -8,19 +8,73 @@
 <body>
   <h1>Aerangis mystacidii</h1>
 
-  <ul class="scheda">
-    <li><strong>Luce:</strong> media, indiretta</li>
-    <li><strong>Temperatura:</strong> 18–26 °C</li>
-    <li><strong>Umidità:</strong> 60–80%</li>
-    <li><strong>Annaffiatura:</strong> regolare, asciugare tra un ciclo e l’altro</li>
-    <li><strong>Substrato:</strong> bark fine / montata</li>
-    <li><strong>Fioritura:</strong> primavera–estate</li>
-  </ul>
+  <section>
+    <h2>Origine e habitat</h2>
+    <p>Madagascar e Africa orientale. Epifita in foreste umide, su rami ombreggiati.</p>
+  </section>
 
-  <p class="note">
-    Orchidea africana epifita, ama aria in movimento e buona umidità.
-  </p>
+  <section>
+    <h2>Tipo di crescita</h2>
+    <p>Monopodiale, compatta.</p>
+  </section>
 
-  <a href="index.html">⬅ Torna all’elenco</a>
+  <section>
+    <h2>Luce</h2>
+    <p>Media (8.000–12.000 lux). Luce filtrata, evitare sole diretto.</p>
+  </section>
+
+  <section>
+    <h2>Temperatura</h2>
+    <ul>
+      <li>Giorno: 22–26 °C</li>
+      <li>Notte: 16–18 °C</li>
+      <li>Minimo: 14 °C</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Umidità</h2>
+    <p>60–80%</p>
+  </section>
+
+  <section>
+    <h2>Ventilazione</h2>
+    <p>Costante ma delicata.</p>
+  </section>
+
+  <section>
+    <h2>Substrato / Montaggio</h2>
+    <p>Montata o bark molto fine in vaso piccolo.</p>
+  </section>
+
+  <section>
+    <h2>Annaffiatura</h2>
+    <ul>
+      <li>Estate: 2–3 volte a settimana</li>
+      <li>Inverno: 1 volta a settimana</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Fertilizzazione</h2>
+    <p>20-20-20 a 1/4 dose ogni 2 annaffiature.</p>
+  </section>
+
+  <section>
+    <h2>Riposo</h2>
+    <p>Leggero in inverno.</p>
+  </section>
+
+  <section>
+    <h2>Fioritura</h2>
+    <p>Primavera–estate, profumata di notte.</p>
+  </section>
+
+  <section>
+    <h2>Note di coltivazione</h2>
+    <p>Sensibile ai ristagni, ama aria in movimento.</p>
+  </section>
+
+  <p><a href="index.html">⬅ Torna all’elenco</a></p>
 </body>
 </html>
