Add detailed care instructions for Epidendrum polybulbon

--- a/epidendrum-polybulbon.html
+++ b/epidendrum-polybulbon.html
@@ -7,19 +7,47 @@
 </head>
 <body>
   <h1>Epidendrum polybulbon</h1>
-
-  <ul class="scheda">
-    <li><strong>Luce:</strong> medio-alta</li>
-    <li><strong>Temperatura:</strong> 16–28 °C</li>
-    <li><strong>Umidità:</strong> 50–70%</li>
-    <li><strong>Annaffiatura:</strong> frequente in crescita</li>
-    <li><strong>Substrato:</strong> bark medio o montata</li>
-    <li><strong>Fioritura:</strong> estate</li>
+  <h2>Origine e habitat</h2>
+  <p>America Centrale e Meridionale. Epifita in zone luminose e ventilate.</p>
+  
+  <h2>Tipo di crescita</h2>
+  <p>Simpodiale, cespitosa, crescita vigorosa.</p>
+  
+  <h2>Luce</h2>
+  <p>Medio-alta (15.000–25.000 lux). Tollera alcune ore di sole filtrato.</p>
+  
+  <h2>Temperatura</h2>
+  <ul>
+    <li>Giorno: 20–28 °C</li>
+    <li>Notte: 14–18 °C</li>
   </ul>
-
-  <p class="note">
-    Specie robusta, tollera luce più intensa rispetto ad altre orchidee.
-  </p>
+  
+  <h2>Umidità</h2>
+  <p>50–70%</p>
+  
+  <h2>Ventilazione</h2>
+  <p>Buona ventilazione continua.</p>
+  
+  <h2>Substrato / Montaggio</h2>
+  <p>Bark medio-grosso o montata. Non ama substrati troppo fini.</p>
+  
+  <h2>Annaffiatura</h2>
+  <ul>
+    <li>Estate: frequente, mantenere leggermente umido</li>
+    <li>Inverno: ridurre, senza seccare completamente</li>
+  </ul>
+  
+  <h2>Fertilizzazione</h2>
+  <p>Regolare durante la crescita, 1/2 dose ogni 2 settimane.</p>
+  
+  <h2>Riposo</h2>
+  <p>Nessun vero riposo marcato.</p>
+  
+  <h2>Fioritura</h2>
+  <p>Estate. Fiori piccoli ma numerosi.</p>
+  
+  <h2>Note</h2>
+  <p>Specie robusta e adattabile, ideale anche per coltivazione all’esterno in estate.</p>
 
   <a href="index.html">⬅ Torna all’elenco</a>
 </body>
