Add detailed care instructions for Phalaenopsis

--- a/phalaenopsis-mini-mark.html
+++ b/phalaenopsis-mini-mark.html
@@ -7,19 +7,47 @@
 </head>
 <body>
   <h1>Phalaenopsis Mini Mark</h1>
-
-  <ul class="scheda">
-    <li><strong>Luce:</strong> bassa-media, indiretta</li>
-    <li><strong>Temperatura:</strong> 18–30 °C</li>
-    <li><strong>Umidità:</strong> 40–60%</li>
-    <li><strong>Annaffiatura:</strong> ogni 7–10 giorni</li>
-    <li><strong>Substrato:</strong> bark fine</li>
-    <li><strong>Fioritura:</strong> inverno–primavera</li>
+  <h2>Origine e habitat</h2>
+  <p>Ibrido di Phalaenopsis, derivato da specie tropicali asiatiche.</p>
+  
+  <h2>Tipo di crescita</h2>
+  <p>Monopodiale, compatta.</p>
+  
+  <h2>Luce</h2>
+  <p>Bassa-media (6.000–10.000 lux). No sole diretto.</p>
+  
+  <h2>Temperatura</h2>
+  <ul>
+    <li>Giorno: 22–30 °C</li>
+    <li>Notte: 18–20 °C</li>
   </ul>
-
-  <p class="note">
-    Ibrido compatto, ideale per interni luminosi ma senza sole diretto.
-  </p>
+  
+  <h2>Umidità</h2>
+  <p>40–60%</p>
+  
+  <h2>Ventilazione</h2>
+  <p>Leggera, evitare correnti fredde.</p>
+  
+  <h2>Substrato / Montaggio</h2>
+  <p>Bark fine, vaso trasparente consigliato.</p>
+  
+  <h2>Annaffiatura</h2>
+  <ul>
+    <li>Estate: ogni 5–7 giorni</li>
+    <li>Inverno: ogni 10–14 giorni</li>
+  </ul>
+  
+  <h2>Fertilizzazione</h2>
+  <p>Bilanciata, 1/4 dose ogni 2 settimane.</p>
+  
+  <h2>Riposo</h2>
+  <p>Nessun vero riposo, ma lieve riduzione in inverno.</p>
+  
+  <h2>Fioritura</h2>
+  <p>Inverno–primavera. Fiori profumati, maculati.</p>
+  
+  <h2>Note</h2>
+  <p>Molto tollerante, ideale per interni ben illuminati.</p>
 
   <a href="index.html">⬅ Torna all’elenco</a>
 </body>
