--- a/aerangis-mystacidii.html
+++ b/aerangis-mystacidii.html
@@ -9,6 +9,14 @@
   <h1>Aerangis mystacidii</h1>
 
   <section>
+    <h2>Assegna un nome alla tua pianta</h2>
+    <label for="plantNameInput">Nome della pianta: </label>
+    <input type="text" id="plantNameInput" placeholder="Scrivi qui...">
+    <p>La tua pianta si chiama: <span id="plantNameDisplay"> patate fiorite </span></p>
+  </section>
+
+  
+  <section>
     <h2>Origine e habitat</h2>
     <p>Madagascar e Africa orientale. Epifita in foreste umide, su rami ombreggiati.</p>
   </section>
