Add link to Create card in index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <li><a href="aerangis-mystacidii.html">Aerangis mystacidii</a></li>
     <li><a href="epidendrum-polybulbon.html">Epidendrum polybulbon</a></li>
     <li><a href="phalaenopsis-mini-mark.html">Phalaenopsis Mini Mark</a></li>
+    <li><a href="create_card.html">Create card</a></li>
   </ul>
+  
 </body>
 </html>
