Revise PS text in index.html
Updated the PS text to include a note about errors.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </p>
   
   <p>
-    PS. Ovviamente questo testo è stato scritto dal mio amico gianfrancogpt! Siamo pur sempre nel 2026!
+    PS. Ovviamente questo testo è stato scritto dal mio amico gianfrancogpt ed è pieno di errori :)))) siamo pur sempre nel 2026!
   </p>
 
   <ul>
